game/css/map/map_space.css
* {
    overflow: hidden;
}

#container {
    width: 100%;
    height: 100%;
    overflow: hidden;
    align-items: center;
    justify-content: center;
}
  
#map {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    user-select: none;
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    cursor: grab;
    overflow: hidden;
}

.marker-button {
    position: absolute;
    z-index: 1;
    overflow: hidden;
}

.marker-button-b {
    border: 0;
    font-size: 18px;
    padding: 10px;
    border-radius: 15%;
    color: rgb(0, 0, 0);
    background: none;
    cursor: pointer;
    width: 128px;
    height: 128px;
    overflow: hidden;
    transition: all 0.15s ease-in-out;
}

.marker-button-b p {
    color: transparent;
}


.marker-button-b:hover p {
    color: aliceblue;
}

#marker-1 {
    left: calc(100px + 100px);
    top: calc(100px + 100px);
    background-image: url("../../img/planets/novaria.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-1:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}
#marker-2 {
    left: calc(100px + 100px);
    top: calc(100px + 300px);
    background-image: url("../../img/planets/aethera.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-2:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-3 {
    left: calc(100px + 100px);
    top: calc(100px + 500px);
    background-image: url("../../img/planets/helion.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-3:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-4 {
    left: calc(100px + 300px);
    top: calc(100px + 100px);
    background-image: url("../../img/planets/terra_nova.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-4:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-5 {
    left: calc(100px + 300px);
    top: calc(100px + 300px);
    background-image: url("../../img/planets/arcadia.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-5:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-6 {
    left: calc(100px + 300px);
    top: calc(100px + 500px);
    background-image: url("../../img/planets/cerulea.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-6:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-7 {
    left: calc(100px + 500px);
    top: calc(100px + 100px);
    background-image: url("../../img/planets/xenos.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-7:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-8 {
    left: calc(100px + 500px);
    top: calc(100px + 300px);
    background-image: url("../../img/planets/titanus.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-8:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-9 {
    left: calc(100px + 500px);
    top: calc(100px + 300px);
    background-image: url("../../img/planets/eridanus.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-9:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

#marker-10 {
    left: calc(100px + 500px);
    top: calc(100px + 300px);
    background-image: url("../../img/planets/aurius.png");
    background-repeat: no-repeat;
    image-rendering: crisp-edges;
    background-size: 128px;
    transition: all 0.15s ease-in-out;
}

#marker-10:hover {
    filter: brightness(0.75);
    filter: drop-shadow(0 0 20px #222222);
    transform: scale(1.1);
}

